# turbo-couscous

./: .gitignore  README.md  comprehensive_test.py  setup.py
benchmark/: comprehensive_test.py  dvnp_opt_performance_test.py  large_file_test.py
cmd/: run.py
cplusplus/: CMakeLists.txt  LICENSE  README.md  benchmark_comparison.sh  build.sh  ccc.pc.in  circular_chromosome_compression.cpp  circular_chromosome_compression.h  example_usage.cpp
cplusplus/benchmark/: large_file_benchmark.cpp
cplusplus/tests/: test_ccc_cpp.cpp
demo/: README.md  comprehensive_demo.py  dictionary_reset_comprehensive.py  genomic_compression_demo.py  hash_verification_demo.py  quick_genomic_test.py  shannon_analysis_demo.py
report/: DVNP_OPTIMIZATION_REPORT.md  DYNAMIC_RESET_IMPLEMENTATION.md  LARGE_FILE_ENHANCEMENT_REPORT.md  LARGE_SCALE_TEST_REPORT.md  TESTING_REPORT.md
test/: __init__.py  test_ccc.py  test_circular.py  test_exact_failure.py  test_hash_verification.py  test_lzw.py  test_marker_conflict.py  test_shannon_entropy.py
utils/: __init__.py  circular_chromosome_compression.py  helpers.py
